correct some gramma and removed the useage of us, we etc in the text and replaced it with the.

--- a/Lab2_Disease_prediction.ipynb
+++ b/Lab2_Disease_prediction.ipynb
@@ -28,7 +28,7 @@
     "## Cardivascular disease\n",
     "\n",
     "\n",
-    "In this report, cardiovascular disease is the primary focus, with the objective of developing an AI system capable of predicting the presence of cardiovascular disease in individuals. This involves filtering, manipulating, and removing data to appropriately fit it into an AI model. While creating an AI bot for cardiovascular disease prediction, it is necessary that the training data is precise, given the critical nature of the issue, which involves human health. The trained AI must, at a minimum avoid producing any false positives. A false positive prediction incorrectly indicating that an individual does not have cardiovascular disease when they actually do could have serious implications. Conversely a false negative suggesting that an individual has cardiovascular disease when they do not while still concerning, leads to further testing that can clarify the individual’s health status"
+    "In this report, cardiovascular disease is the primary focus, with the objective of developing an AI system capable of predicting the presence of cardiovascular disease in individuals. This involves filtering, manipulating, and removing data to appropriately fit it into an AI model. While creating an AI bot for cardiovascular disease prediction, it is necessary that the training data is precise, given the critical nature of the issue, which involves human health. The trained AI must, at a minimum avoid producing any false positives. A false positive prediction incorrectly indicating that an individual does not have cardiovascular disease when they actually do could have serious implications. but a false negative suggesting that an individual has cardiovascular disease when they do not while still concerning, leads to further testing that can clarify the individual’s health status"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Good range of age distrubation to form a more accuarate result"
+    "* Good range of age distrubation to form better and more accuarate results"
    ]
   },
   {
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The correlation heatmap presents an overview of the relationships between different variables within our dataset. Although there are some correlations present, they are not strong most values are around zero, suggesting no correlations. This observation underscores the need for data manipulation to unveil more significant correlations and to remove any data that may disrupt the results. Identifying and extracting relevant patterns from the data is crucial to enhance the predictive accuracy of our AI model for cardiovascular disease."
+    "The correlation heatmap presents an overview of the relationships between different variables within the dataset. Although there are some correlations present, they are not strong most values are around zero, suggesting no correlations. This observation underscores the need for data manipulation to unveil more significant correlations and to remove any data that may disrupt the results. Identifying and extracting relevant patterns from the data is crucial to enhance the predictive accuracy of the AI model for cardiovascular disease."
    ]
   },
   {
@@ -417,7 +417,7 @@
     "* Stochastic Gradient Descent\n",
     "\n",
     "\n",
-    "Each of these models result have an approximate accuracy of 72%. While the performance metrics were similar, the differences in their strengths and weaknesses were shown. Some models may have higher precision, where  others might offer better recall. To use these differing attributes, a Voting Classifier was used. This ensemble technique combines the predictions from the individual models to form a consensus prediction, using  the 'best parts' of each model. this will result in a more robust and accurate model, often outperforming any single model. "
+    "Each of these models result have an approximate accuracy of 72%. While the performance metrics were similar, the differences in their strengths and weaknesses were shown. Some models may have higher precision, where  others might offer better recall. To use these differing attributes, a Voting Classifier was used. This ensemble technique combines the predictions from the individual models to form a better prediction, using  the 'best parts' of each model. this will result in a more robust and accurate model, often outperforming any single model. "
    ]
   },
   {
@@ -485,9 +485,9 @@
    "source": [
     "## conclusion\n",
     "\n",
-    "In summary, the outcome of this study was not as successful as hoped. Predicting cardiovascular disease through AI is more complex than initially thought. With an accuracy rate around 73%, our model is not ready for clinical use, where precision is vital.\n",
+    "In summary, the outcome of this study was not as successful as hoped. Predicting cardiovascular disease through AI is more complex than initially thought. With an accuracy rate around 73%, the model is not ready for clinical use, where precision is vital.\n",
     "\n",
-    "When it comes to applying AI in healthcare, caution is key. A slight error can have serious consequences on a person's health. Therefore, it is essential that we aim for an AI system that is extremely reliable. The question of who is responsible if the AI makes a wrong call is also important, especially in a healthcare setting.\n",
+    "When it comes to applying AI in healthcare, caution is key. A slight error can have serious consequences on a person's health. Therefore, it is essential that the aim for an AI system that is extremely reliable. The question of who is responsible if the AI makes a wrong call is also important, especially in a healthcare setting.\n",
     "\n",
     "Looking ahead, improving the AI will involve collecting better data and continuously upgrading the system's programming. We also need to put in place strong rules about how AI is used in healthcare, to ensure the safety and trust of patients relying on this technology."
    ]
