Fixed the last small misstakes with grammar

--- a/Lab2_Disease_prediction.ipynb
+++ b/Lab2_Disease_prediction.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Good range of age distrubation to form better and more accuarate results"
+    "* Good range of age distrubation to form a better and more accuarate results"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Outliers in ap_high and ap_low collumn and BMI collumn removed"
+    "* Outliers within the columns for ap_high, ap_low, and BMI were removed from the dataset."
    ]
   },
   {
