changed the conclusion and fixed some grammar

--- a/Lab2_Disease_prediction.ipynb
+++ b/Lab2_Disease_prediction.ipynb
@@ -485,7 +485,7 @@
    "source": [
     "## conclusion\n",
     "\n",
-    "In summary, the outcome of this study was not as successful as hoped. Predicting cardiovascular disease through AI is more complex than initially thought. With an accuracy rate around 73%, the model is not ready for clinical use, where precision is vital.\n",
+    "In summary, the outcome of this study was predicted due to the hard nature of the problem. Predicting cardiovascular disease through a simple AI-model, a more sophistcated and complex model is essential for the issue. With an accuracy rate around 73%, the model is not ready for clinical use, where precision is vital.\n",
     "\n",
     "When it comes to applying AI in healthcare, caution is key. A slight error can have serious consequences on a person's health. Therefore, it is essential that the aim for an AI system that is extremely reliable. The question of who is responsible if the AI makes a wrong call is also important, especially in a healthcare setting.\n",
     "\n",
